load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "blobstore",
    srcs = [
        "batched_store_blob_access.go",
        "blob_access_mutable_proto_store.go",
        "existence_precondition_blob_access.go",
        "mutable_proto_store.go",
        "suspending_blob_access.go",
    ],
    importpath = "github.com/buildbarn/bb-remote-execution/pkg/blobstore",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/clock",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
        "@com_github_buildbarn_bb_storage//pkg/blobstore",
        "@com_github_buildbarn_bb_storage//pkg/blobstore/buffer",
        "@com_github_buildbarn_bb_storage//pkg/blobstore/slicing",
        "@com_github_buildbarn_bb_storage//pkg/digest",
        "@com_github_buildbarn_bb_storage//pkg/util",
        "@com_github_prometheus_client_golang//prometheus",
        "@org_golang_google_genproto_googleapis_rpc//errdetails",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//proto",
        "@org_golang_x_sync//errgroup",
        "@org_golang_x_sync//semaphore",
    ],
)

go_test(
    name = "blobstore_test",
    srcs = [
        "batched_store_blob_access_test.go",
        "blob_access_mutable_proto_store_test.go",
        "existence_precondition_blob_access_test.go",
        "suspending_blob_access_test.go",
    ],
    deps = [
        ":blobstore",
        "//internal/mock",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
        "@com_github_buildbarn_bb_storage//pkg/blobstore/buffer",
        "@com_github_buildbarn_bb_storage//pkg/digest",
        "@com_github_buildbarn_bb_storage//pkg/proto/iscc",
        "@com_github_buildbarn_bb_storage//pkg/testutil",
        "@com_github_golang_mock//gomock",
        "@com_github_stretchr_testify//require",
        "@org_golang_google_genproto_googleapis_rpc//errdetails",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//types/known/timestamppb",
        "@org_golang_x_sync//semaphore",
    ],
)
