load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "build_client.go",
        "build_directory.go",
        "build_directory_creator.go",
        "build_executor.go",
        "build_queue_state_provider.go",
        "caching_build_executor.go",
        "clean_build_directory_creator.go",
        "file_pool_stats_build_executor.go",
        "in_memory_build_queue.go",
        "local_build_executor.go",
        "logging_build_executor.go",
        "metrics_build_executor.go",
        "naive_build_directory.go",
        "output_hierarchy.go",
        "root_build_directory_creator.go",
        "shared_build_directory_creator.go",
        "storage_flushing_build_executor.go",
        "timestamped_build_executor.go",
    ],
    importpath = "github.com/buildbarn/bb-remote-execution/pkg/builder",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/filesystem:go_default_library",
        "//pkg/proto/remoteworker:go_default_library",
        "//pkg/proto/resourceusage:go_default_library",
        "//pkg/proto/runner:go_default_library",
        "//pkg/runner:go_default_library",
        "//pkg/sync:go_default_library",
        "//pkg/util:go_default_library",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
        "@com_github_bazelbuild_remote_apis//build/bazel/semver:go_default_library",
        "@com_github_buildbarn_bb_storage//pkg/blobstore:go_default_library",
        "@com_github_buildbarn_bb_storage//pkg/blobstore/buffer:go_default_library",
        "@com_github_buildbarn_bb_storage//pkg/builder:go_default_library",
        "@com_github_buildbarn_bb_storage//pkg/cas:go_default_library",
        "@com_github_buildbarn_bb_storage//pkg/clock:go_default_library",
        "@com_github_buildbarn_bb_storage//pkg/digest:go_default_library",
        "@com_github_buildbarn_bb_storage//pkg/filesystem:go_default_library",
        "@com_github_buildbarn_bb_storage//pkg/proto/cas:go_default_library",
        "@com_github_buildbarn_bb_storage//pkg/util:go_default_library",
        "@com_github_golang_protobuf//jsonpb:go_default_library_gen",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_golang_protobuf//ptypes:go_default_library_gen",
        "@com_github_google_uuid//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@go_googleapis//google/longrunning:longrunning_go_proto",
        "@io_bazel_rules_go//proto/wkt:duration_go_proto",
        "@io_bazel_rules_go//proto/wkt:empty_go_proto",
        "@io_bazel_rules_go//proto/wkt:timestamp_go_proto",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "caching_build_executor_test.go",
        "clean_build_directory_creator_test.go",
        "file_pool_stats_build_executor_test.go",
        "in_memory_build_queue_test.go",
        "local_build_executor_test.go",
        "naive_build_directory_test.go",
        "output_hierarchy_test.go",
        "root_build_directory_creator_test.go",
        "shared_build_directory_creator_test.go",
        "storage_flushing_build_executor_test.go",
        "timestamped_build_executor_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//internal/mock:go_default_library",
        "//pkg/filesystem:go_default_library",
        "//pkg/proto/remoteworker:go_default_library",
        "//pkg/proto/resourceusage:go_default_library",
        "//pkg/proto/runner:go_default_library",
        "//pkg/sync:go_default_library",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
        "@com_github_buildbarn_bb_storage//pkg/blobstore/buffer:go_default_library",
        "@com_github_buildbarn_bb_storage//pkg/builder:go_default_library",
        "@com_github_buildbarn_bb_storage//pkg/digest:go_default_library",
        "@com_github_buildbarn_bb_storage//pkg/filesystem:go_default_library",
        "@com_github_buildbarn_bb_storage//pkg/proto/cas:go_default_library",
        "@com_github_buildbarn_bb_storage//pkg/util:go_default_library",
        "@com_github_golang_mock//gomock:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_golang_protobuf//ptypes:go_default_library_gen",
        "@com_github_google_uuid//:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@go_googleapis//google/longrunning:longrunning_go_proto",
        "@go_googleapis//google/rpc:status_go_proto",
        "@io_bazel_rules_go//proto/wkt:any_go_proto",
        "@io_bazel_rules_go//proto/wkt:duration_go_proto",
        "@io_bazel_rules_go//proto/wkt:empty_go_proto",
        "@io_bazel_rules_go//proto/wkt:timestamp_go_proto",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
        "@org_golang_google_grpc//test/bufconn:go_default_library",
    ],
)
