load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "builder",
    srcs = [
        "build_client.go",
        "build_directory.go",
        "build_directory_creator.go",
        "build_executor.go",
        "caching_build_executor.go",
        "clean_build_directory_creator.go",
        "cost_computing_build_executor.go",
        "file_pool_stats_build_executor.go",
        "fuse_build_directory.go",
        "fuse_build_directory_disabled.go",
        "in_memory_build_queue.go",
        "invocation_id_extractor.go",
        "local_build_executor.go",
        "logging_build_executor.go",
        "metrics_build_executor.go",
        "naive_build_directory.go",
        "output_hierarchy.go",
        "root_build_directory_creator.go",
        "shared_build_directory_creator.go",
        "storage_flushing_build_executor.go",
        "timestamped_build_executor.go",
        "uploadable_directory.go",
    ],
    importpath = "github.com/buildbarn/bb-remote-execution/pkg/builder",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/builder/initialsizeclass",
        "//pkg/builder/platform",
        "//pkg/cas",
        "//pkg/cleaner",
        "//pkg/filesystem",
        "//pkg/proto/buildqueuestate",
        "//pkg/proto/remoteworker",
        "//pkg/proto/resourceusage",
        "//pkg/proto/runner",
        "//pkg/util",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
        "@com_github_bazelbuild_remote_apis//build/bazel/semver",
        "@com_github_buildbarn_bb_storage//pkg/atomic",
        "@com_github_buildbarn_bb_storage//pkg/blobstore",
        "@com_github_buildbarn_bb_storage//pkg/blobstore/buffer",
        "@com_github_buildbarn_bb_storage//pkg/builder",
        "@com_github_buildbarn_bb_storage//pkg/clock",
        "@com_github_buildbarn_bb_storage//pkg/digest",
        "@com_github_buildbarn_bb_storage//pkg/filesystem",
        "@com_github_buildbarn_bb_storage//pkg/filesystem/path",
        "@com_github_buildbarn_bb_storage//pkg/proto/cas",
        "@com_github_buildbarn_bb_storage//pkg/util",
        "@com_github_google_uuid//:uuid",
        "@com_github_prometheus_client_golang//prometheus",
        "@go_googleapis//google/longrunning:longrunning_go_proto",
        "@io_opencensus_go//trace",
        "@io_opencensus_go//trace/propagation",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//metadata",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//encoding/protojson",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//types/known/anypb",
        "@org_golang_google_protobuf//types/known/durationpb",
        "@org_golang_google_protobuf//types/known/emptypb",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ] + select({
        "@io_bazel_rules_go//go/platform:android": [
            "//pkg/filesystem/fuse",
            "@com_github_buildbarn_bb_storage//pkg/random",
        ],
        "@io_bazel_rules_go//go/platform:darwin": [
            "//pkg/filesystem/fuse",
            "@com_github_buildbarn_bb_storage//pkg/random",
        ],
        "@io_bazel_rules_go//go/platform:freebsd": [
            "//pkg/filesystem/fuse",
        ],
        "@io_bazel_rules_go//go/platform:ios": [
            "//pkg/filesystem/fuse",
            "@com_github_buildbarn_bb_storage//pkg/random",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "//pkg/filesystem/fuse",
            "@com_github_buildbarn_bb_storage//pkg/random",
        ],
        "@io_bazel_rules_go//go/platform:windows": [
            "//pkg/filesystem/fuse",
        ],
        "//conditions:default": [],
    }),
)

go_test(
    name = "builder_test",
    srcs = [
        "build_client_test.go",
        "caching_build_executor_test.go",
        "clean_build_directory_creator_test.go",
        "cost_computing_build_executor_test.go",
        "file_pool_stats_build_executor_test.go",
        "in_memory_build_queue_test.go",
        "local_build_executor_test.go",
        "naive_build_directory_test.go",
        "output_hierarchy_test.go",
        "root_build_directory_creator_test.go",
        "shared_build_directory_creator_test.go",
        "storage_flushing_build_executor_test.go",
        "timestamped_build_executor_test.go",
    ],
    embed = [":builder"],
    deps = [
        "//internal/mock",
        "//pkg/cleaner",
        "//pkg/filesystem",
        "//pkg/proto/buildqueuestate",
        "//pkg/proto/remoteworker",
        "//pkg/proto/resourceusage",
        "//pkg/proto/runner",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
        "@com_github_buildbarn_bb_storage//pkg/atomic",
        "@com_github_buildbarn_bb_storage//pkg/blobstore/buffer",
        "@com_github_buildbarn_bb_storage//pkg/builder",
        "@com_github_buildbarn_bb_storage//pkg/digest",
        "@com_github_buildbarn_bb_storage//pkg/filesystem",
        "@com_github_buildbarn_bb_storage//pkg/filesystem/path",
        "@com_github_buildbarn_bb_storage//pkg/proto/cas",
        "@com_github_buildbarn_bb_storage//pkg/testutil",
        "@com_github_buildbarn_bb_storage//pkg/util",
        "@com_github_golang_mock//gomock",
        "@com_github_google_uuid//:uuid",
        "@com_github_stretchr_testify//require",
        "@go_googleapis//google/longrunning:longrunning_go_proto",
        "@go_googleapis//google/rpc:status_go_proto",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//metadata",
        "@org_golang_google_grpc//status",
        "@org_golang_google_grpc//test/bufconn",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//types/known/anypb",
        "@org_golang_google_protobuf//types/known/durationpb",
        "@org_golang_google_protobuf//types/known/emptypb",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)
