load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "blob_access_directory_fetcher.go",
        "blob_access_file_fetcher.go",
        "caching_directory_fetcher.go",
        "directory_fetcher.go",
        "file_fetcher.go",
        "hardlinking_file_fetcher.go",
    ],
    importpath = "github.com/buildbarn/bb-remote-execution/pkg/cas",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
        "@com_github_buildbarn_bb_storage//pkg/blobstore:go_default_library",
        "@com_github_buildbarn_bb_storage//pkg/digest:go_default_library",
        "@com_github_buildbarn_bb_storage//pkg/eviction:go_default_library",
        "@com_github_buildbarn_bb_storage//pkg/filesystem:go_default_library",
    ],
)
