load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "cas",
    srcs = [
        "blob_access_directory_fetcher.go",
        "blob_access_file_fetcher.go",
        "caching_directory_fetcher.go",
        "configuration.go",
        "decomposed_directory_walker.go",
        "directory_fetcher.go",
        "directory_walker.go",
        "file_fetcher.go",
        "hardlinking_file_fetcher.go",
    ],
    importpath = "github.com/buildbarn/bb-remote-execution/pkg/cas",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/proto/configuration/cas",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
        "@com_github_buildbarn_bb_storage//pkg/blobstore",
        "@com_github_buildbarn_bb_storage//pkg/blobstore/buffer",
        "@com_github_buildbarn_bb_storage//pkg/blobstore/slicing",
        "@com_github_buildbarn_bb_storage//pkg/digest",
        "@com_github_buildbarn_bb_storage//pkg/eviction",
        "@com_github_buildbarn_bb_storage//pkg/filesystem",
        "@com_github_buildbarn_bb_storage//pkg/filesystem/path",
        "@com_github_buildbarn_bb_storage//pkg/util",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//encoding/protowire",
        "@org_golang_google_protobuf//proto",
    ],
)

go_test(
    name = "cas_test",
    srcs = [
        "blob_access_directory_fetcher_test.go",
        "caching_directory_fetcher_test.go",
        "decomposed_directory_walker_test.go",
        "hardlinking_file_fetcher_test.go",
    ],
    deps = [
        ":cas",
        "//internal/mock",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:execution",
        "@com_github_buildbarn_bb_storage//pkg/blobstore/buffer",
        "@com_github_buildbarn_bb_storage//pkg/blobstore/slicing",
        "@com_github_buildbarn_bb_storage//pkg/digest",
        "@com_github_buildbarn_bb_storage//pkg/eviction",
        "@com_github_buildbarn_bb_storage//pkg/filesystem/path",
        "@com_github_buildbarn_bb_storage//pkg/testutil",
        "@com_github_golang_mock//gomock",
        "@com_github_stretchr_testify//require",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)
