load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "clock",
    srcs = ["suspendable_clock.go"],
    importpath = "github.com/buildbarn/bb-remote-execution/pkg/clock",
    visibility = ["//visibility:public"],
    deps = ["@com_github_buildbarn_bb_storage//pkg/clock"],
)

go_test(
    name = "clock_test",
    srcs = ["suspendable_clock_test.go"],
    deps = [
        ":clock",
        "//internal/mock",
        "@com_github_stretchr_testify//require",
        "@org_uber_go_mock//gomock",
    ],
)
