load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "credentials",
    srcs = [
        "proc_credentials_nonunix.go",
        "proc_credentials_unix.go",
    ],
    importpath = "github.com/buildbarn/bb-remote-execution/pkg/credentials",
    visibility = ["//visibility:public"],
    deps = select({
        "@io_bazel_rules_go//go/platform:android": [
            "//pkg/proto/configuration/credentials",
        ],
        "@io_bazel_rules_go//go/platform:darwin": [
            "//pkg/proto/configuration/credentials",
        ],
        "@io_bazel_rules_go//go/platform:freebsd": [
            "//pkg/proto/configuration/credentials",
        ],
        "@io_bazel_rules_go//go/platform:ios": [
            "//pkg/proto/configuration/credentials",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "//pkg/proto/configuration/credentials",
        ],
        "@io_bazel_rules_go//go/platform:windows": [
            "//pkg/proto/configuration/credentials",
            "@org_golang_google_grpc//codes",
            "@org_golang_google_grpc//status",
        ],
        "//conditions:default": [],
    }),
)
