load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "action_digest_subdirectory_manager.go",
        "clean_build_directory_manager.go",
        "concurrent_manager.go",
        "environment.go",
        "local_execution_environment.go",
        "manager.go",
        "remote_execution_environment.go",
        "runner_server.go",
        "singleton_manager.go",
        "temp_directory_cleaning_manager.go",
    ],
    importpath = "github.com/buildbarn/bb-remote-execution/pkg/environment",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/proto/runner:go_default_library",
        "@com_github_buildbarn_bb_storage//pkg/filesystem:go_default_library",
        "@com_github_buildbarn_bb_storage//pkg/util:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "action_digest_subdirectory_manager_test.go",
        "clean_build_directory_manager_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//internal/mock:go_default_library",
        "//pkg/proto/runner:go_default_library",
        "@com_github_bazelbuild_remote_apis//build/bazel/remote/execution/v2:go_default_library",
        "@com_github_buildbarn_bb_storage//pkg/util:go_default_library",
        "@com_github_golang_mock//gomock:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@org_golang_google_grpc//codes:go_default_library",
        "@org_golang_google_grpc//status:go_default_library",
    ],
)
