load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "filesystem",
    srcs = [
        "bitmap_sector_allocator.go",
        "block_device_backed_file_pool.go",
        "configuration.go",
        "directory_backed_file_pool.go",
        "empty_file_pool.go",
        "file_pool.go",
        "in_memory_file_pool.go",
        "lazy_directory.go",
        "quota_enforcing_file_pool.go",
        "sector_allocator.go",
    ],
    importpath = "github.com/buildbarn/bb-remote-execution/pkg/filesystem",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/proto/configuration/filesystem",
        "@com_github_buildbarn_bb_storage//pkg/atomic",
        "@com_github_buildbarn_bb_storage//pkg/blockdevice",
        "@com_github_buildbarn_bb_storage//pkg/filesystem",
        "@com_github_buildbarn_bb_storage//pkg/filesystem/path",
        "@com_github_buildbarn_bb_storage//pkg/util",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)

go_test(
    name = "filesystem_test",
    srcs = [
        "bitmap_sector_allocator_test.go",
        "block_device_backed_file_pool_test.go",
        "directory_backed_file_pool_test.go",
        "empty_file_pool_test.go",
        "in_memory_file_pool_test.go",
        "lazy_directory_test.go",
        "quota_enforcing_file_pool_test.go",
    ],
    deps = [
        ":filesystem",
        "//internal/mock",
        "@com_github_buildbarn_bb_storage//pkg/filesystem",
        "@com_github_buildbarn_bb_storage//pkg/filesystem/path",
        "@com_github_buildbarn_bb_storage//pkg/testutil",
        "@com_github_golang_mock//gomock",
        "@com_github_stretchr_testify//require",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)
