load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "filesystem",
    srcs = ["lazy_directory.go"],
    importpath = "github.com/buildbarn/bb-remote-execution/pkg/filesystem",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_buildbarn_bb_storage//pkg/filesystem",
        "@com_github_buildbarn_bb_storage//pkg/filesystem/path",
        "@com_github_buildbarn_bb_storage//pkg/util",
        "@org_golang_google_grpc//codes",
    ],
)

go_test(
    name = "filesystem_test",
    srcs = ["lazy_directory_test.go"],
    deps = [
        ":filesystem",
        "//internal/mock",
        "@com_github_buildbarn_bb_storage//pkg/filesystem",
        "@com_github_buildbarn_bb_storage//pkg/filesystem/path",
        "@com_github_buildbarn_bb_storage//pkg/testutil",
        "@com_github_stretchr_testify//require",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_uber_go_mock//gomock",
    ],
)
