load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "runner",
    srcs = [
        "local_runner_disabled.go",
        "local_runner_rss_bytes.go",
        "local_runner_rss_kibibytes.go",
        "local_runner_unix.go",
        "remote_runner.go",
        "runner.go",
        "runner_server.go",
        "temporary_directory_cleaning_runner.go",
        "temporary_directory_installing_runner.go",
    ],
    importpath = "github.com/buildbarn/bb-remote-execution/pkg/runner",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/proto/runner",
        "//pkg/proto/tmp_installer",
        "//pkg/sync",
        "@com_github_buildbarn_bb_storage//pkg/filesystem",
        "@com_github_buildbarn_bb_storage//pkg/util",
        "@io_bazel_rules_go//proto/wkt:empty_go_proto",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
    ] + select({
        "@io_bazel_rules_go//go/platform:android": [
            "//pkg/proto/resourceusage",
            "@com_github_buildbarn_bb_storage//pkg/filesystem/path",
            "@com_github_golang_protobuf//ptypes:go_default_library_gen",
            "@io_bazel_rules_go//proto/wkt:any_go_proto",
            "@io_bazel_rules_go//proto/wkt:duration_go_proto",
            "@org_golang_google_grpc//status",
        ],
        "@io_bazel_rules_go//go/platform:darwin": [
            "//pkg/proto/resourceusage",
            "@com_github_buildbarn_bb_storage//pkg/filesystem/path",
            "@com_github_golang_protobuf//ptypes:go_default_library_gen",
            "@io_bazel_rules_go//proto/wkt:any_go_proto",
            "@io_bazel_rules_go//proto/wkt:duration_go_proto",
            "@org_golang_google_grpc//status",
        ],
        "@io_bazel_rules_go//go/platform:freebsd": [
            "//pkg/proto/resourceusage",
            "@com_github_buildbarn_bb_storage//pkg/filesystem/path",
            "@com_github_golang_protobuf//ptypes:go_default_library_gen",
            "@io_bazel_rules_go//proto/wkt:any_go_proto",
            "@io_bazel_rules_go//proto/wkt:duration_go_proto",
            "@org_golang_google_grpc//status",
        ],
        "@io_bazel_rules_go//go/platform:ios": [
            "//pkg/proto/resourceusage",
            "@com_github_buildbarn_bb_storage//pkg/filesystem/path",
            "@com_github_golang_protobuf//ptypes:go_default_library_gen",
            "@io_bazel_rules_go//proto/wkt:any_go_proto",
            "@io_bazel_rules_go//proto/wkt:duration_go_proto",
            "@org_golang_google_grpc//status",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "//pkg/proto/resourceusage",
            "@com_github_buildbarn_bb_storage//pkg/filesystem/path",
            "@com_github_golang_protobuf//ptypes:go_default_library_gen",
            "@io_bazel_rules_go//proto/wkt:any_go_proto",
            "@io_bazel_rules_go//proto/wkt:duration_go_proto",
            "@org_golang_google_grpc//status",
        ],
        "@io_bazel_rules_go//go/platform:windows": [
            "@com_github_buildbarn_bb_storage//pkg/filesystem/path",
            "@org_golang_google_grpc//status",
        ],
        "//conditions:default": [],
    }),
)

go_test(
    name = "runner_test",
    srcs = [
        "local_runner_test.go",
        "runner_server_test.go",
    ],
    embed = [":runner"],
    deps = [
        "//internal/mock:go_default_library",
        "//pkg/proto/runner",
        "@com_github_buildbarn_bb_storage//pkg/filesystem",
        "@com_github_buildbarn_bb_storage//pkg/filesystem/path",
        "@com_github_buildbarn_bb_storage//pkg/testutil",
        "@com_github_golang_mock//gomock",
        "@com_github_stretchr_testify//require",
        "@io_bazel_rules_go//proto/wkt:empty_go_proto",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)
