load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "runner",
    srcs = [
        "clean_runner.go",
        "local_runner_disabled.go",
        "local_runner_rss_bytes.go",
        "local_runner_rss_kibibytes.go",
        "local_runner_unix.go",
        "path_existence_checking_runner.go",
        "temporary_directory_installing_runner.go",
        "temporary_directory_symlinking_runner.go",
    ],
    importpath = "github.com/buildbarn/bb-remote-execution/pkg/runner",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/cleaner",
        "//pkg/proto/runner",
        "//pkg/proto/tmp_installer",
        "@com_github_buildbarn_bb_storage//pkg/filesystem/path",
        "@com_github_buildbarn_bb_storage//pkg/util",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_protobuf//types/known/emptypb",
    ] + select({
        "@io_bazel_rules_go//go/platform:android": [
            "//pkg/proto/resourceusage",
            "@com_github_buildbarn_bb_storage//pkg/filesystem",
            "@org_golang_google_grpc//status",
            "@org_golang_google_protobuf//types/known/anypb",
            "@org_golang_google_protobuf//types/known/durationpb",
        ],
        "@io_bazel_rules_go//go/platform:darwin": [
            "//pkg/proto/resourceusage",
            "@com_github_buildbarn_bb_storage//pkg/filesystem",
            "@org_golang_google_grpc//status",
            "@org_golang_google_protobuf//types/known/anypb",
            "@org_golang_google_protobuf//types/known/durationpb",
        ],
        "@io_bazel_rules_go//go/platform:freebsd": [
            "//pkg/proto/resourceusage",
            "@com_github_buildbarn_bb_storage//pkg/filesystem",
            "@org_golang_google_grpc//status",
            "@org_golang_google_protobuf//types/known/anypb",
            "@org_golang_google_protobuf//types/known/durationpb",
        ],
        "@io_bazel_rules_go//go/platform:ios": [
            "//pkg/proto/resourceusage",
            "@com_github_buildbarn_bb_storage//pkg/filesystem",
            "@org_golang_google_grpc//status",
            "@org_golang_google_protobuf//types/known/anypb",
            "@org_golang_google_protobuf//types/known/durationpb",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "//pkg/proto/resourceusage",
            "@com_github_buildbarn_bb_storage//pkg/filesystem",
            "@org_golang_google_grpc//status",
            "@org_golang_google_protobuf//types/known/anypb",
            "@org_golang_google_protobuf//types/known/durationpb",
        ],
        "@io_bazel_rules_go//go/platform:windows": [
            "@com_github_buildbarn_bb_storage//pkg/filesystem",
            "@org_golang_google_grpc//status",
        ],
        "//conditions:default": [],
    }),
)

go_test(
    name = "runner_test",
    srcs = [
        "clean_runner_test.go",
        "local_runner_test.go",
        "path_existence_checking_runner_test.go",
        "temporary_directory_symlinking_runner_test.go",
    ],
    embed = [":runner"],
    deps = [
        "//internal/mock",
        "//pkg/cleaner",
        "//pkg/proto/runner",
        "@com_github_buildbarn_bb_storage//pkg/filesystem",
        "@com_github_buildbarn_bb_storage//pkg/filesystem/path",
        "@com_github_buildbarn_bb_storage//pkg/testutil",
        "@com_github_golang_mock//gomock",
        "@com_github_stretchr_testify//require",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//types/known/emptypb",
    ],
)
